# affine-note

./: .gitignore  .prettierignore  .yarnrc.yml  Cargo.toml  README.md  deploy.sh  eslint.config.mjs  oxlint.json  package.json  tsconfig.json  vercel.json  vitest.config.ts
.cargo/: config.toml
.devcontainer/: build.sh  devcontainer.json  docker-compose.yml
.docker/dev/: .env.example  compose.yml.example
.docker/selfhost/: config.example.json  schema.json
.github/: renovate.json
.github/ISSUE_TEMPLATE/: BUG-REPORT.yml  FEATURE-REQUEST.yml
.github/actions/build-rust/: action.yml
.github/actions/copilot-test/: action.yml
.github/actions/deploy/: deploy.mjs
.github/actions/server-test-env/: action.yml
.github/actions/setup-node/: action.yml
.github/helm/affine/: values.yaml
.github/helm/separate-config/: Dockerfile_pgvector
.github/workflows/: build-images.yml  build-test.yml  copilot-test.yml  deploy.yml  release-desktop.yml  release-mobile.yml
.yarn/patches/: @nestjs-testing-npm-10.4.15-d591a1705a.patch
blocksuite/affine/all/: package.json  tsconfig.json
blocksuite/affine/block-attachment/: package.json  tsconfig.json
blocksuite/affine/block-bookmark/: package.json  tsconfig.json
blocksuite/affine/block-callout/: package.json  tsconfig.json
blocksuite/affine/block-code/: package.json
blocksuite/affine/block-data-view/: package.json  tsconfig.json
blocksuite/affine/block-database/: package.json  tsconfig.json
blocksuite/affine/block-embed/: package.json  tsconfig.json
blocksuite/affine/block-image/: package.json  tsconfig.json
blocksuite/affine/block-latex/: package.json  tsconfig.json
blocksuite/affine/block-list/: package.json
blocksuite/affine/block-note/: package.json  tsconfig.json
blocksuite/affine/block-paragraph/: tsconfig.json
blocksuite/affine/block-root/: package.json  tsconfig.json
blocksuite/affine/block-surface/: package.json
blocksuite/affine/block-surface-ref/: package.json  tsconfig.json
blocksuite/affine/block-table/: package.json  tsconfig.json
blocksuite/affine/components/: package.json
blocksuite/affine/data-view/: package.json
blocksuite/affine/fragment-doc-title/: package.json  tsconfig.json
blocksuite/affine/fragment-frame-panel/: package.json
blocksuite/affine/fragment-outline/: package.json  tsconfig.json
blocksuite/affine/model/: package.json
blocksuite/affine/rich-text/: package.json
blocksuite/affine/shared/: package.json
blocksuite/affine/widget-remote-selection/: package.json
blocksuite/blocks/: package.json  tsconfig.json
blocksuite/blocks/src/: effects.ts  (+1 more)
blocksuite/docs/: typedoc.json
blocksuite/integration-test/: package.json  tsconfig.json  vitest.config.ts
blocksuite/playground/: package.json
blocksuite/tests-legacy/: package.json  tsconfig.json
docs/: developing-server.md
docs/reference/: package.json
scripts/: download-blocksuite-fonts.mjs
tests/affine-cloud/: package.json
tests/affine-cloud-copilot/: README.md  package.json
tests/affine-desktop/: package.json  playwright.config.ts
tests/affine-desktop-cloud/: package.json
tests/affine-local/: dev-server.ts  package.json  playwright.config.ts  tsconfig.json
tests/affine-mobile/: package.json
tests/blocksuite/: package.json  tsconfig.json
tests/kit/: package.json
tools/cli/: package.json
tools/playstore-auto-bump/: package.json
(+1265 files in other folders)
