[workspace]
members = [
  "./packages/backend/native",
  "./packages/common/native",
  "./packages/frontend/mobile-native",
  "./packages/frontend/native",
  "./packages/frontend/native/nbstore",
  "./packages/frontend/native/schema",
  "./packages/frontend/native/sqlite_v1",
]
resolver = "3"

[workspace.package]
edition = "2024"

[workspace.dependencies]
affine_common          = { path = "./packages/common/native" }
affine_nbstore         = { path = "./packages/frontend/native/nbstore" }
anyhow                 = "1"
base64-simd            = "0.8"
block2                 = "0.6"
chrono                 = "0.4"
core-foundation        = "0.10"
coreaudio-rs           = "0.12"
criterion2             = { version = "3", default-features = false }
dispatch2              = "0.2"
docx-parser            = { git = "https://github.com/toeverything/docx-parser" }
dotenvy                = "0.15"
file-format            = { version = "0.26", features = ["reader"] }
homedir                = "0.3"
infer                  = { version = "0.19.0" }
libc                   = "0.2"
mimalloc               = "0.1"
mp3lame-encoder        = "0.2"
napi                   = { version = "3.0.0-alpha.31", features = ["async", "chrono_date", "error_anyhow", "napi9", "serde"] }
napi-build             = { version = "2" }
napi-derive            = { version = "3.0.0-alpha.28" }
notify                 = { version = "8", features = ["serde"] }
objc2                  = "0.6"
objc2-foundation       = "0.3"
once_cell              = "1"
parking_lot            = "0.12"
path-ext               = "0.1.1"
pdf-extract            = { git = "https://github.com/toeverything/pdf-extract" }
rand                   = "0.9"
rayon                  = "1.10"
readability            = { version = "0.3.0", default-features = false }
rubato                 = "0.16"
screencapturekit       = "0.3"
serde                  = "1"
serde_json             = "1"
sha3                   = "0.10"
sqlx                   = { version = "0.8", default-features = false, features = ["chrono", "macros", "migrate", "runtime-tokio", "sqlite", "tls-rustls"] }
strum_macros           = "0.27.0"
symphonia              = { version = "0.5", features = ["all", "opt-simd"] }
text-splitter          = "0.24"
thiserror              = "2"
tiktoken-rs            = "0.6"
tokio                  = "1.37"
tree-sitter            = { version = "0.25" }
tree-sitter-c          = { version = "0.23" }
tree-sitter-c-sharp    = { version = "0.23" }
tree-sitter-cpp        = { version = "0.23" }
tree-sitter-go         = { version = "0.23" }
tree-sitter-java       = { version = "0.23" }
tree-sitter-javascript = { version = "0.23" }
tree-sitter-kotlin-ng  = { version = "1.1" }
tree-sitter-python     = { version = "0.23" }
tree-sitter-rust       = { version = "0.23" }
tree-sitter-scala      = { version = "0.23" }
tree-sitter-typescript = { version = "0.23" }
uniffi                 = "0.29"
url                    = { version = "2.5" }
uuid                   = "1.8"
v_htmlescape           = "0.15"
y-octo                 = { git = "https://github.com/y-crdt/y-octo.git", branch = "main" }

[profile.dev.package.sqlx-macros]
opt-level = 3

[profile.release]
codegen-units = 1
lto           = true
opt-level     = 3
strip         = "symbols"
